--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1; url=maxpdr18.github.io/wordpress/index.php">
 	<title>Meu novo website</title>
 </head>
 <body>
